# fast_maskrcnn

./: README.md  pyproject.toml
fast_maskrcnn/: app.py  main.py  utils.py
