[tool.poetry]
name = "fast_maskrcnn"
version = "0.1.0"
description = "Mask RCNN for object detection deployed with FastAPI"
authors = ["Nikolas Pitsillos <npitsillos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
torchvision = "^0.7.0"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
streamlit = "^0.66.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
backend = "streamlit fast_maskrcnn.app:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
